--- a/BlazorTool.Client/Layout/NavMenu.razor
+++ b/BlazorTool.Client/Layout/NavMenu.razor
@@ -38,6 +38,12 @@
             </NavLink>
         </div>
         <div class="nav-item">
+                <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="filterOrders">
+                    <TelerikSvgIcon Icon="@SvgIcon.TrackChangesEnable" Size="lg"></TelerikSvgIcon>
+                <span class="p-2">Filtrowanie zleceń</span>
+            </NavLink>
+        </div>
+        <div class="nav-item">
             <NavLink class="nav-link d-flex align-items-center px-3 py-2" href="devices">
                 <TelerikSvgIcon Icon="@SvgIcon.Gears" Size="lg"></TelerikSvgIcon>
                 <span class="p-2" >@Localizer["NavMenu_Devices"]</span>
